<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CartonActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/Location"
    android:id="@+id/id_location_label"
    android:layout_marginTop="20dp"
    />

<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/id_location_barcode_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"/>

<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/id_scan_button"
    android:text="@string/scan"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/id_location_label"
    android:background="@mipmap/scan_button_image"
    android:clickable="true"
    android:layout_marginTop="40dp"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/or"
    android:id="@+id/id_or"
    android:layout_below="@+id/id_scan_button"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="50dp" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/EnterCarton"
    android:id="@+id/id_enter_carton_label"
    android:layout_marginTop="61dp"
    android:layout_below="@+id/id_or"
    android:layout_centerHorizontal="true" />

<EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/id_carton_entry"
    android:layout_below="@+id/id_enter_carton_label"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:singleLine="true"
    android:lines="1"/>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/submit"
    android:id="@+id/id_submit_button"
    android:layout_below="@+id/id_carton_entry"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="80dp" />
</RelativeLayout>