<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LocationActivity">
<ImageView
android:layout_width="100dp"
android:layout_height="100dp"
android:id="@+id/client_logo"
android:layout_alignParentTop="true"
android:layout_centerHorizontal="true"
android:layout_marginTop="10dp"
android:src="@mipmap/client_logo" />

<ImageButton
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:id="@+id/id_scan_button"
android:text="@string/scan"
android:layout_below="@+id/client_logo"
android:layout_centerHorizontal="true"
android:layout_marginTop="20dp"
android:background="@mipmap/scan_button_image"
android:clickable="true" />

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textAppearance="?android:attr/textAppearanceLarge"
android:text="@string/or"
android:id="@+id/id_or"
android:layout_below="@+id/id_scan_button"
android:layout_centerHorizontal="true"
android:layout_marginTop="20dp" />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textAppearance="?android:attr/textAppearanceLarge"
android:text="@string/enter_location"
android:id="@+id/id_enter_location_label"
android:layout_below="@+id/id_or"
android:layout_centerHorizontal="true"
android:layout_marginTop="50dp" />

<EditText
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:id="@+id/id_location_entry"
android:layout_below="@+id/id_enter_location_label"
android:layout_centerHorizontal="true"
android:layout_marginTop="20dp"
android:singleLine="true"
android:lines="1"/>

<Button
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/submit"
android:id="@+id/id_submit_button"
android:layout_below="@+id/id_location_entry"
android:layout_centerHorizontal="true"
android:layout_marginTop="10dp"
android:layout_marginRight="5dp"
    />
</RelativeLayout>