<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="localhost.stockinquiry.SettingsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/action_settings">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/action_settings"
            android:id="@+id/setting_screen_header_2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="25dp"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/wm_server"
            android:id="@+id/wm_url_label"
            android:paddingTop="10dp"
            android:inputType="text"
            android:layout_below="@+id/setting_screen_header_2" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_wm_server_id"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:layout_alignTop="@+id/wm_url_label"
            android:layout_toEndOf="@+id/wm_url_label"
            android:layout_toRightOf="@+id/wm_url_label" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save_button"
            android:layout_below="@+id/input_wm_server_id"
            android:layout_alignRight="@+id/setting_screen_header_2"
            android:layout_alignEnd="@+id/setting_screen_header_2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_status_button"
            android:id="@+id/checkConnectionStatus"
            android:layout_below="@+id/save_button"
            android:layout_centerHorizontal="true"/>

        <CheckedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SocketConnectionStatus"
            android:layout_below="@+id/checkConnectionStatus"
            android:layout_toEndOf="@+id/wm_url_label" />

        <CheckedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/WMConnectionStatus"
            android:layout_below="@+id/SocketConnectionStatus"
            android:layout_alignStart="@+id/SocketConnectionStatus" />
            android:layout_alignLeft="@+id/SocketConnectionStatus" />

    </RelativeLayout>
</RelativeLayout>
